--- a/snake.html
+++ b/snake.html
@@ -15,6 +15,8 @@
             align-items: center;
             height: 100vh;
             background-color: #f0f0f0;
+            overflow: hidden; /* 禁止页面滚动 */
+            touch-action: none; /* 禁止触摸默认行为 */
         }
         .game-container {
             text-align: center;
@@ -42,12 +44,50 @@
         .back-button:hover {
             background-color: #0056b3;
         }
+
+        /* 虚拟方向键样式 */
+        .controls {
+            display: none; /* 默认隐藏，移动端显示 */
+            margin-top: 20px;
+            text-align: center;
+        }
+        .controls button {
+            font-size: 24px;
+            padding: 15px;
+            margin: 5px;
+            border: none;
+            background-color: #007BFF;
+            color: white;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        .controls button:active {
+            background-color: #0056b3;
+        }
+
+        /* 移动端样式 */
+        @media (max-width: 600px) {
+            .controls {
+                display: block; /* 移动端显示虚拟方向键 */
+            }
+            canvas {
+                width: 90vw;
+                height: 90vw;
+            }
+        }
     </style>
 </head>
 <body>
     <div class="game-container">
         <h1>贪吃蛇</h1>
         <canvas id="gameCanvas" width="400" height="400"></canvas>
+        <!-- 虚拟方向键 -->
+        <div class="controls">
+            <button id="up">⬆️</button><br>
+            <button id="left">⬅️</button>
+            <button id="down">⬇️</button>
+            <button id="right">➡️</button>
+        </div>
         <a href="index.html" class="back-button">返回主界面</a>
     </div>
     <script>
@@ -161,6 +201,7 @@
 
         const EventHandler = {
             init() {
+                // 键盘控制
                 window.addEventListener('keydown', e => {
                     switch (e.key) {
                         case 'ArrowUp':
@@ -181,34 +222,24 @@
                     }
                 });
 
-                let touchStartX = 0;
-                let touchStartY = 0;
-
-                window.addEventListener('touchstart', e => {
-                    touchStartX = e.touches[0].clientX;
-                    touchStartY = e.touches[0].clientY;
+                // 虚拟方向键控制
+                document.getElementById('up').addEventListener('click', () => {
+                    if (Game.direction.y === 0) Game.direction = { x: 0, y: -1 };
+                });
+                document.getElementById('down').addEventListener('click', () => {
+                    if (Game.direction.y === 0) Game.direction = { x: 0, y: 1 };
+                });
+                document.getElementById('left').addEventListener('click', () => {
+                    if (Game.direction.x === 0) Game.direction = { x: -1, y: 0 };
+                });
+                document.getElementById('right').addEventListener('click', () => {
+                    if (Game.direction.x === 0) Game.direction = { x: 1, y: 0 };
                 });
 
-                window.addEventListener('touchend', e => {
-                    const touchEndX = e.changedTouches[0].clientX;
-                    const touchEndY = e.changedTouches[0].clientY;
-                    const dx = touchEndX - touchStartX;
-                    const dy = touchEndY - touchStartY;
-
-                    if (Math.abs(dx) > Math.abs(dy)) {
-                        if (dx > 0 && Game.direction.x === 0) {
-                            Game.direction = { x: 1, y: 0 };
-                        } else if (dx < 0 && Game.direction.x === 0) {
-                            Game.direction = { x: -1, y: 0 };
-                        }
-                    } else {
-                        if (dy > 0 && Game.direction.y === 0) {
-                            Game.direction = { x: 0, y: 1 };
-                        } else if (dy < 0 && Game.direction.y === 0) {
-                            Game.direction = { x: 0, y: -1 };
-                        }
-                    }
-                });
+                // 禁止页面滚动
+                document.addEventListener('touchmove', (e) => {
+                    e.preventDefault();
+                }, { passive: false });
             }
         };
 
