--- a/index.html
+++ b/index.html
@@ -6,18 +6,22 @@
     <title>小游戏集合</title>
     <style>
         /* 全局样式 */
-        body {
-            font-family: Arial, sans-serif;
+        html, body {
             margin: 0;
             padding: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden; /* 禁止页面滚动 */
+        }
+
+        body {
+            font-family: Arial, sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
             background: #0f2027; /* 深色模式默认背景 */
-            overflow: hidden; /* 隐藏超出部分 */
-            position: relative;
             transition: background 0.5s ease;
+            position: relative;
         }
 
         /* 浅色模式 */
@@ -152,7 +156,7 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 400px;
+            max-width: min(450px,80%); /* 移动端宽度适配 */
             width: 100%;
             position: relative;
             z-index: 2; /* 确保内容在动画之上 */
@@ -161,6 +165,7 @@
         h1 {
             margin-bottom: 20px;
             color: #333;
+            font-size: 2rem; /* 移动端标题字体大小 */
         }
 
         .game-list {
@@ -171,13 +176,15 @@
 
         .game-link {
             margin: 10px;
-            padding: 10px 20px;
-            font-size: 1.2em;
+            padding: 15px 30px; /* 移动端按钮大小 */
+            font-size: 1.2rem; /* 移动端按钮字体大小 */
             color: #fff;
             background-color: #007BFF;
             text-decoration: none;
             border-radius: 5px;
             transition: background-color 0.3s;
+            width: 80%; /* 移动端按钮宽度 */
+            text-align: center;
         }
 
         .game-link:hover {
@@ -186,12 +193,33 @@
 
         /* 深浅模式切换按钮 */
         .mode-toggle {
-            position: absolute;
+            position: fixed; /* 固定位置 */
             top: 20px;
             right: 20px;
             font-size: 24px;
             cursor: pointer;
             z-index: 3;
+            background: rgba(255, 255, 255, 0.8);
+            border-radius: 50%;
+            padding: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        /* 移动端适配 */
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 1.5rem; /* 更小的标题字体 */
+            }
+
+            .game-link {
+                font-size: 1rem; /* 更小的按钮字体 */
+                padding: 10px 20px; /* 更小的按钮内边距 */
+            }
+
+            .mode-toggle {
+                font-size: 20px; /* 更小的切换按钮 */
+                padding: 8px;
+            }
         }
     </style>
 </head>
@@ -249,7 +277,7 @@
             starContainer.style.pointerEvents = 'none';
             document.body.appendChild(starContainer);
 
-            for (let i = 0; i < 108; i++) { // 生成 100 颗星星
+            for (let i = 0; i < 100; i++) { // 生成 100 颗星星
                 const star = document.createElement('div');
                 star.className = 'star';
 
@@ -276,7 +304,7 @@
             fireflyContainer.style.pointerEvents = 'none';
             document.body.appendChild(fireflyContainer);
 
-            for (let i = 0; i < 17; i++) { // 生成 20 只萤火虫
+            for (let i = 0; i < 20; i++) { // 生成 20 只萤火虫
                 const firefly = document.createElement('div');
                 firefly.className = 'firefly';
 
@@ -304,7 +332,7 @@
             cloudContainer.style.pointerEvents = 'none';
             document.body.appendChild(cloudContainer);
 
-            for (let i = 0; i < 10; i++) { // 生成 5 朵云
+            for (let i = 0; i < 5; i++) { // 生成 5 朵云
                 const cloud = document.createElement('div');
                 cloud.className = 'cloud';
 
