--- a/memory-cards.html
+++ b/memory-cards.html
@@ -6,33 +6,52 @@
     <title>记忆卡片游戏</title>
     <style>
         /* 全局样式 */
-        body {
-            font-family: Arial, sans-serif;
+        html, body {
             margin: 0;
             padding: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden; /* 禁止页面滚动 */
+            touch-action: none; /* 禁用触摸默认行为 */
+        }
+
+        body {
+            font-family: Arial, sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
             background-color: #f0f0f0;
         }
+
         .game-container {
             text-align: center;
             background-color: #fff;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            max-width: min(500px,85%); /* 移动端宽度适配 */
+            width: 100%;
         }
+
+        h1 {
+            margin-bottom: 20px;
+            color: #333;
+            font-size: 2rem; /* 移动端标题字体大小 */
+        }
+
         .board {
             display: grid;
-            grid-template-columns: repeat(4, 100px);
-            grid-template-rows: repeat(4, 100px);
+            grid-template-columns: repeat(4, 1fr); /* 4 列 */
+            grid-template-rows: repeat(4, 1fr); /* 4 行 */
             gap: 10px;
             margin: 20px auto;
+            max-width: 100%; /* 确保棋盘不超出容器 */
         }
+
         .card {
-            width: 100px;
-            height: 100px;
+            width: 100%;
+            height: 0;
+            padding-bottom: 100%; /* 保持卡片为正方形 */
             background-color: #ccc;
             display: flex;
             justify-content: center;
@@ -43,6 +62,7 @@
             position: relative;
             perspective: 1000px; /* 3D 翻转效果 */
         }
+
         .card .front,
         .card .back {
             width: 100%;
@@ -56,20 +76,25 @@
             backface-visibility: hidden; /* 隐藏背面 */
             transition: transform 0.6s;
         }
+
         .card .front {
             background-color: #fff;
             transform: rotateY(180deg); /* 初始状态隐藏 */
         }
+
         .card .back {
             background-color: #007BFF;
             color: #fff;
         }
+
         .card.flipped .front {
             transform: rotateY(0deg); /* 翻转后显示 */
         }
+
         .card.flipped .back {
             transform: rotateY(180deg); /* 翻转后隐藏 */
         }
+
         .back-button {
             display: inline-block;
             margin-top: 20px;
@@ -81,8 +106,26 @@
             border-radius: 5px;
             transition: background-color 0.3s;
         }
+
         .back-button:hover {
             background-color: #0056b3;
+        }
+
+        /* 移动端适配 */
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 1.5rem; /* 更小的标题字体 */
+            }
+
+            .board {
+                grid-template-columns: repeat(4, 1fr); /* 4 列 */
+                grid-template-rows: repeat(4, 1fr); /* 4 行 */
+                gap: 5px; /* 更小的间距 */
+            }
+
+            .card {
+                font-size: 1.5em; /* 更小的字体 */
+            }
         }
     </style>
 </head>
@@ -94,7 +137,8 @@
     </div>
 
     <script>
-        const cards = ['A', 'A', 'B', 'B', 'C', 'C', 'D', 'D', 'E', 'E', 'F', 'F', 'G', 'G', 'H', 'H'];
+        // 卡片内容改为符号
+        const cards = ['😀', '😀', '😎', '😎', '🤖', '🤖', '👻', '👻', '🎃', '🎃', '👾', '👾', '🦄', '🦄', '🐉', '🐉'];
         let flippedCards = [];
         let matchedCards = [];
 
