--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -6,40 +6,84 @@
     <title>井字棋</title>
     <style>
         /* 全局样式 */
-        body {
-            font-family: Arial, sans-serif;
+        html, body {
             margin: 0;
             padding: 0;
-            display: grid;
-            place-items: center; /* 水平和垂直居中 */
-            height: 100vh; /* 使 body 占满整个视口高度 */
+            width: 100%;
+            height: 100%;
+            overflow: hidden; /* 禁止页面滚动 */
+            touch-action: none; /* 禁用触摸默认行为 */
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             background-color: #f0f0f0;
         }
+
         .game-container {
             text-align: center;
             background-color: #fff;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            max-width: min(400px, 85%); /* 移动端宽度适配 */
+            width: 100%;
         }
+
+        h1 {
+            margin-bottom: 20px;
+            font-size: 1.5rem; /* 移动端标题字体大小 */
+        }
+
         .board {
             display: grid;
-            grid-template-columns: repeat(3, 100px);
-            grid-template-rows: repeat(3, 100px);
+            grid-template-columns: repeat(3, 1fr); /* 3 列 */
+            grid-template-rows: repeat(3, 1fr); /* 3 行 */
             gap: 5px;
             margin: 20px auto;
+            max-width: 300px; /* 棋盘最大宽度 */
+            width: 100%;
         }
+
         .cell {
-            width: 100px;
-            height: 100px;
+            width: 100%;
+            height: 0;
+            padding-bottom: 100%; /* 保持单元格为正方形 */
             display: flex;
             justify-content: center;
             align-items: center;
             font-size: 2em;
             background-color: #f0f0f0;
             cursor: pointer;
+            position: relative;
         }
-        .back-button {
+
+        .cell::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .cell[data-player="X"]::before {
+            content: 'X';
+            color: #007BFF; /* 蓝色 */
+        }
+
+        .cell[data-player="O"]::before {
+            content: 'O';
+            color: #FF4136; /* 红色 */
+        }
+
+        .button {
             display: inline-block;
             margin-top: 20px;
             padding: 10px 20px;
@@ -49,9 +93,38 @@
             text-decoration: none;
             border-radius: 5px;
             transition: background-color 0.3s;
+            cursor: pointer;
         }
-        .back-button:hover {
+
+        .button:hover {
             background-color: #0056b3;
+        }
+
+        .restart-button {
+            background-color: #28a745; /* 绿色 */
+        }
+
+        .restart-button:hover {
+            background-color: #218838; /* 深绿色 */
+        }
+
+        .back-button {
+            background-color: #007BFF; /* 蓝色 */
+        }
+
+        .back-button:hover {
+            background-color: #0056b3; /* 深蓝色 */
+        }
+
+        /* 移动端适配 */
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 1.2rem; /* 更小的标题字体 */
+            }
+
+            .cell {
+                font-size: 1.5em; /* 更小的字体 */
+            }
         }
     </style>
 </head>
@@ -70,11 +143,14 @@
             <div class="cell" data-index="8"></div>
         </div>
         <p id="status"></p>
-        <a href="index.html" class="back-button">返回主界面</a>
+        <button class="button restart-button" id="restartButton">重新开始</button>
+        <a href="index.html" class="button back-button">返回主界面</a>
     </div>
+
     <script>
         const board = document.getElementById('board');
         const status = document.getElementById('status');
+        const restartButton = document.getElementById('restartButton');
         let currentPlayer = 'X';
         let gameState = ['', '', '', '', '', '', '', '', ''];
         let gameActive = true;
@@ -99,7 +175,7 @@
             }
 
             gameState[clickedCellIndex] = currentPlayer;
-            clickedCell.textContent = currentPlayer;
+            clickedCell.setAttribute('data-player', currentPlayer); // 设置棋子类型
 
             checkForWinner();
         }
@@ -134,7 +210,24 @@
             status.textContent = `轮到玩家 ${currentPlayer}`;
         }
 
+        function restartGame() {
+            // 重置游戏状态
+            gameState = ['', '', '', '', '', '', '', '', ''];
+            gameActive = true;
+            currentPlayer = 'X';
+            status.textContent = `轮到玩家 ${currentPlayer}`;
+
+            // 清空棋盘
+            const cells = document.querySelectorAll('.cell');
+            cells.forEach(cell => {
+                cell.removeAttribute('data-player');
+                cell.textContent = '';
+            });
+        }
+
+        // 绑定事件
         board.addEventListener('click', handleCellClick);
+        restartButton.addEventListener('click', restartGame);
     </script>
 </body>
 </html>
