--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
             <a href="snake.html" class="game-link">贪吃蛇游戏</a>
             <a href="breakout.html" class="game-link">打砖块游戏</a>
             <a href="memory-cards.html" class="game-link">记忆卡片游戏</a>
+            <a href="puzzle.html" class="game-link">拼图游戏</a>
         </div>
     </div>
 
