--- a/puzzle.html
+++ b/puzzle.html
@@ -49,7 +49,7 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 85%;
+            max-width: min(600px, 85%);
             width: 100%;
             display: flex;
             flex-direction: column;
@@ -164,8 +164,8 @@
             position: absolute;
             top: 20px;
             left: 20px;
-            width: 100px;
-            height: 100px;
+            width: 150px;
+            height: 150px;
             border: 2px solid var(--tile-border);
             border-radius: 5px;
             box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
